Name:                dikmax-name
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Maxim Dikun
Maintainer:          me@dikmax.name
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable dikmax-name
  hs-source-dirs: .
  main-is: site.hs

  Build-depends:
    base >= 4 && < 5,
    hakyll >= 4.3.3.0 && < 4.4,
    tagsoup >= 0.12 && < 0.13,
    regex-compat >= 0.95.1,
    old-locale >= 1 && < 1.1,
    containers >= 0.5 && < 0.6,
    xmlhtml >= 0.2.3 && < 0.3,
    pandoc >= 1.11.1 && < 1.12,
    text >= 0.11.3.1 && < 0.12,
    mtl >= 2.1.2 && < 2.2,
    blaze-builder >= 0.3.1.1 && < 0.4
