Name:                haskell-blog
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable disqus-sync
  hs-source-dirs: src
  main-is: DisqusSync.hs

Executable haskell-blog
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 0.11,
    containers >= 0.5 && < 0.6,
    curl >= 1.3.8,
    directory >= 1.2.0 && < 1.3,
    HDBC >= 2.3.1.2,
    HDBC-mysql >= 0.6.6.1,
    heist >= 0.12 && < 0.13,
    json >= 0.7,
    MonadCatchIO-transformers >= 0.3 && < 0.4,
    mtl >= 2 && < 3,
    lens >= 3.7.6 && < 3.8,
    old-locale >= 1,
    pandoc >= 1.11.1,
    snap == 0.12.*,
    snap-core   == 0.9.4.*,
    snap-server == 0.9.3.*,
    snap-loader-dynamic == 0.10.*,
    snap-loader-static == 0.9.*,
    snaplet-hdbc == 0.12.*,
    stringsearch >= 0.3.6,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    transformers >= 0.2 && < 0.4,
    unordered-containers >= 0.1.4.3 && < 0.3,
    xmlhtml == 0.2.*,
    lifted-base,
    blaze-builder

  if flag(development)
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

